# oxdraw

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  README.md  build.rs  docker-compose.yml  flow.mmd  frontend_refactor.md  package-lock.json
.github/workflows/: ci.yml  deploy-pages.yml
docs/: ai.md  codedown_example.md  codemap_generation.mmd  web-ui-architecture.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: CodePanel.tsx  DiagramCanvas.tsx  MarkdownViewer.tsx  WasmDiagramCanvas.tsx  diagramCanvasTypes.ts
frontend/lib/: api.ts  sourceBuilder.ts  types.ts  wasmEditor.ts
frontend/public/: oxdraw_wasm.d.ts  oxdraw_wasm.js  oxdraw_wasm_bg.wasm  oxdraw_wasm_bg.wasm.d.ts
frontend/tests/: wasm-parity.mjs
src/: cli.rs  codedown.rs  codemap.rs  database.rs  diagram.rs  editor_core.rs  export.rs  files.rs  lib.rs  main.rs  serve.rs  session.rs  utils.rs
tests/: cli.rs  library.rs  wasm_compatibility.rs
tests/input/: conditional.mmd  failure_modes.mmd  flow.mmd  hierarchical_graph.mmd  html_breaks.mmd  image_node.mmd  issue_66.mmd  layered.mmd  oxdraw_def_map.mmd  oxdraw_src_map.mmd  sequence_sample.mmd  shapes.mmd  state_machine.mmd  subgraphs.mmd
utils/: view_visual_diff.rs
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  DiagramCanvas.tsx  api.ts  styles.css  vite-env.d.ts
