[package]
name = "oxdraw"
version = "0.1.2"
edition = "2024"
include = [
	"Cargo.toml",
	"build.rs",
	"README.md",
	"src/**",
	"tests/**",
	"frontend/out/**",
]
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "Library, CLI and Web View for Declarative Diagramming"
repository = "https://github.com/RohanAdwankar/oxdraw"
license = "MIT"
keywords = ["diagram", "svg", "visualization", "mermaid", "render"]

[lib]
name = "oxdraw"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "oxdraw"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["json"], optional = true }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
	"sync",
	"fs",
], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
tower = { version = "0.5", optional = true }
resvg = { version = "0.43", features = ["text"] }
tiny-skia = { version = "0.11", features = ["png"], default-features = false }
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2"

[features]
default = ["server"]
server = ["axum", "tokio", "tower-http", "tower"]
