[package]
name = "oxdraw"
version = "0.2.0"
edition = "2024"
include = [
    "Cargo.toml",
    "build.rs",
    "README.md",
    "src/**",
    "tests/**",
    "frontend/out/**",
]
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "Library, CLI and Web View for Declarative Diagramming"
repository = "https://github.com/RohanAdwankar/oxdraw"
license = "MIT"
keywords = ["diagram", "svg", "visualization", "mermaid", "render", "AI", "devtool"]

[lib]
name = "oxdraw"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "oxdraw"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["json"], optional = true }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.4"
directories = "5.0"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
zip = { version = "2", default-features = false }
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.12.2"
time = { version = "0.3", features = ["macros"] }
cookie = "0.18"
tiny-skia = { version = "0.11", optional = true }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "fs",
], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
tower = { version = "0.5", optional = true }
http-body-util = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
assert_cmd = "2.1.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["server"]
server = ["axum", "tokio", "tower-http", "tower", "tiny-skia"]

[profile.release]
codegen-units = 1
lto = true
