[package]
name = "oxdraw"
version = "0.2.0"
edition = "2024"
include = [
	"Cargo.toml",
	"build.rs",
	"README.md",
	"src/**",
	"tests/**",
	"frontend/out/**",
]
authors = ["Rohan Adwankar <rohan.adwankar@gmail.com>"]
description = "Library, CLI and Web View for Declarative Diagramming"
repository = "https://github.com/RohanAdwankar/oxdraw"
license = "MIT"
keywords = ["diagram", "svg", "visualization", "mermaid", "render", "AI", "devtool"]

[lib]
name = "oxdraw"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "oxdraw"
path = "src/main.rs"


[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["json"], optional = true }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
walkdir = "2.4"
directories = "5.0"

tokio = { version = "1", features = [
	"macros",
	"rt-multi-thread",
	"signal",
	"sync",
	"fs",
], optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
tower = { version = "0.5", optional = true }
resvg = { version = "0.43", features = ["text"] }
tiny-skia = { version = "0.11", features = ["png"], default-features = false }
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.12.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
assert_cmd = "2.1.1"
libtest-mimic = "0.8.1"
tempfile = "3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["server"]
server = ["axum", "tokio", "tower-http", "tower"]

[profile.release]
codegen-units = 1
lto = true

[[test]]
name = "cli"
harness = false
path = "tests/cli.rs"
